--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.0.2",
+    "@react-spring/native": "^9.5.5",
     "expo": "~51.0.28",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
@@ -32,12 +33,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-deck-swiper": "^2.0.17",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "^0.19.12"
+    "react-native-web": "^0.19.12",
+    "react-tinder-card": "^1.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
