--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.0.2",
     "@react-spring/native": "^9.5.5",
-    "expo": "~51.0.28",
+    "expo": "^51.0.32",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.9",
@@ -30,10 +30,12 @@
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "firebase": "^10.13.1",
+    "lottie-ios": "^3.1.8",
+    "lottie-react-native": "6.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-deck-swiper": "^2.0.17",
+    "react-native-deck-swiper": "^1.1.7",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-radio-buttons-group": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
